@@ -62,6 +62,8 @@
   * The Emulated NVRAM on the filesystem is now also cleared
 - Renames the `SilentBoot` Feature as `DirectBoot`
   * This more accurately describes the feature.
+- Renames `XYZ_hidden_icons` tokens as `hidden_icons_XYZ` and `XYZ_renderer` as `renderer_XYZ`
+    * This permits better grouping of these related items.
 - Extends fixes on Mac Recovery Implementation for MacOS on APFS
   * Adjusted to cover all MacOS instances on APFS
   * APFS Recovery Volumes are handled as Mac Recovery Tools and not as volumes with loaders
